--- a/views/student_info.ejs
+++ b/views/student_info.ejs
@@ -71,6 +71,11 @@
       <label class="block text-gray-700 font-medium mb-1">Email</label>
       <input type="email" value="<%= student.email %>" readonly class="w-full border border-gray-200 rounded px-3 py-2 bg-gray-100 text-gray-500 focus:outline-none focus:ring-2 focus:ring-orange-500" />
     </div>
+
+    <div>
+      <label class="block text-gray-700 font-medium mb-1">IT Duration</label>
+      <input type="text" value="<%= student.it_start_date %> - <%= student.it_end_date %>" readonly class="w-full border border-gray-200 rounded px-3 py-2 bg-gray-100 text-gray-500 focus:outline-none focus:ring-2 focus:ring-orange-500" />
+    </div>
   </div>
 
   <div class="mt-6">
