added client side validation

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -192,7 +192,7 @@
     <div class="logo">
       <div class="logo-icon">📒</div>
       <div>
-        <h1>IT Logbook</h1>
+        <h1>SIWES</h1>
         <p>Supervisor Panel</p>
       </div>
     </div>
